# django-weight-recorde

./: .coveragerc  .gitignore  README.md  manage.py  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200225_2324.py  0003_auto_20200225_2343.py  0004_auto_20200226_0023.py  0005_auto_20200226_2237.py
accounts/templates/accounts/: signin.html  signup.html  update_password.html  user_profile_form.html
accounts/tests/: test_models.py  test_views.py
core/templates/: base.html
django_weight_recorde/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  scaffold.html
templates/partials/: _messages.html
uml/: uml.wsd
weight_recorder/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
weight_recorder/migrations/: 0001_initial.py  0002_auto_20200225_1917.py
weight_recorder/templates/weight_recorder/: dashboard.html  weight_form.html
weight_recorder/tests/: test_forms.py  test_models.py  test_views.py
