[tool.poetry]
name = "django-weight-recorde"
version = "0.1.0"
description = "An app to record weight entries"
authors = ["Cleyson Lima <cleysonph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
